tdf#98074, using the same builtinId maps the styles to the same one

Additionally, using customBuiltin for all styles is a bad idea as well.

Change-Id: I788a3c5b9164f79aa65ded2fc3e6a556e44ee0a8
Reviewed-on: https://gerrit.libreoffice.org/57807
Tested-by: Jenkins
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit fa881095bc62c3646406c82a98d8503377288a54)